<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:ignore="Overdraw">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/app_design_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/backdrop_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/backdrop_subtitle" />

                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/main_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:background="@color/background"
        android:elevation="@dimen/cardview_default_elevation"
        android:onClick="toPlayer"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="toPlayer"
            android:layout_weight="1">
            <ImageView
                android:contentDescription="@string/now_playing_image"
                android:src="@drawable/album4"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="toPlayer"
                android:focusable="true"
                android:scaleType="fitXY" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/play_button"
                android:onClick="changeImage"
                android:contentDescription="@string/play_pauseButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_play"/>

            <ImageButton
                android:contentDescription="@string/previous_button"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:scaleType="fitXY"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_skip_previous"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"/>
            <ImageButton
                android:contentDescription="@string/next_button"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:scaleType="fitXY"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_skip_next"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>